<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <EditText
            android:id="@+id/edtMensagemDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/branco"
            android:hint="@string/alerta"
            android:inputType="none"
            android:clickable="false"
            android:focusable="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelarDialogConfirmacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/botao_redondo"
            app:backgroundTint="@color/vermelhoErroDark"
            android:text="@string/cancelar"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btnOkDialogConfirmacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/botao_redondo"
            app:backgroundTint="@color/verdeOk"
            android:text="@string/confirmar"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>