<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".aplicacao.inicial.InicialFragment"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:text="@string/tititi"
            android:textColor="@color/corPrincipal"
            android:textSize="48sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"

            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/login"
                android:textColor="@color/corPrincipal"
                android:textStyle="bold"
                app:backgroundTint="@color/branco"
                app:cornerRadius="100dp"
                app:strokeColor="@color/corPrincipal"
                app:strokeWidth="4dp" />

            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/botao_redondo"
                android:text="@string/registrar"
                android:textStyle="bold"
                app:backgroundTint="@color/corPrincipal" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>