<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aplicacao.login.LoginFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:startIconDrawable="@drawable/ic_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_email_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/branco"
                        android:fitsSystemWindows="true"
                        android:hint="@string/email"
                        app:strokeWidth="4dp"
                        android:inputType="textPersonName"
                        app:layout_constraintTop_toBottomOf="@+id/input_nome_completo"
                        tools:layout_editor_absoluteX="0dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/ic_senha"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_password_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/branco"
                        android:fitsSystemWindows="true"
                        android:hint="@string/pass"
                        android:inputType="textPassword"
                        app:layout_constraintTop_toBottomOf="@+id/input_email"
                        tools:layout_editor_absoluteX="0dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_logar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_margin="10dp"
                    android:text="@string/login"
                    android:textColor="@color/branco"
                    android:background="@drawable/botao_redondo"
                    app:backgroundTint="@color/corPrincipal"
                    android:textStyle="bold"/>
            </LinearLayout>
        </ScrollView>

</FrameLayout>