<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".aplicacao.cadastrarTopico.CadastrarTopicoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                app:startIconDrawable="@drawable/ic_baseline_chat_bubble_outline_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_nome_topico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:backgroundTint="@color/branco"
                    android:fitsSystemWindows="true"
                    android:hint="@string/nome_topico"
                    android:inputType="textShortMessage"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_cadastrar" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"

                android:layout_marginBottom="10dp"
                app:startIconDrawable="@drawable/ic_baseline_insert_comment_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_descricao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="10"
                    android:ellipsize="end"
                    android:backgroundTint="@color/branco"
                    android:fitsSystemWindows="true"
                    android:hint="@string/descricao_topico"
                    android:inputType="text|textLongMessage"
                    app:layout_constraintTop_toBottomOf="@+id/input_nome_completo"
                    tools:layout_editor_absoluteX="0dp" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btn_cadastrar_Topico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/postar_topico"
                android:textColor="@color/branco"
                android:background="@drawable/botao_redondo"
                app:backgroundTint="@color/corPrincipal"
                android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>

</FrameLayout>